apps/tauri/src-tauri/errors_2.txt
    Checking code-notes v0.3.3 (G:\ws\sharing\ya-boom\apps\tauri\src-tauri)
error[E0432]: unresolved import `crate::database::models::generate_id`
 --> src\database\repository\lazy_topics_repo.rs:1:31
  |
1 | use crate::database::models::{generate_id, CreateTopicDto, Topic, UpdateTopicDto};
  |                               ^^^^^^^^^^^ no `generate_id` in `database::models`

error[E0432]: unresolved import `crate::database::models::generate_id`
 --> src\database\repository\lazy_questions_repo.rs:2:5
  |
2 |     generate_id, Answer, CreateQuestionDto, Question, UpdateQuestionDto,
  |     ^^^^^^^^^^^ no `generate_id` in `database::models`

warning: unused imports: `DatabaseIndex`, `TopicQuestions`, and `TopicsContainer`
 --> src\database\models\mod.rs:9:5
  |
9 |     DatabaseIndex, TopicQuestions, TopicsContainer,
  |     ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `ProgressContainer` and `QuizSessionsIndex`
  --> src\database\models\mod.rs:14:25
   |
14 |     ProgressStatistics, ProgressContainer, QuizSessionsIndex,
   |                         ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

warning: unused import: `rusqlite::Connection`
 --> src\database\repository\lazy_topics_repo.rs:4:5
  |
4 | use rusqlite::Connection;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Mutex`
 --> src\database\repository\lazy_topics_repo.rs:5:22
  |
5 | use std::sync::{Arc, Mutex};
  |                      ^^^^^

warning: unused import: `rusqlite::Connection`
 --> src\database\repository\lazy_questions_repo.rs:5:5
  |
5 | use rusqlite::Connection;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `OptionalExtension`
 --> src\database\repository\lazy_questions_repo.rs:6:24
  |
6 | use rusqlite::{params, OptionalExtension};
  |                        ^^^^^^^^^^^^^^^^^

warning: unused import: `Mutex`
 --> src\database\repository\lazy_questions_repo.rs:7:22
  |
7 | use std::sync::{Arc, Mutex};
  |                      ^^^^^

warning: unused import: `Connection`
 --> src\database\repository\progress_repo.rs:2:24
  |
2 | use rusqlite::{params, Connection};
  |                        ^^^^^^^^^^

warning: unused import: `Mutex`
 --> src\database\repository\progress_repo.rs:3:22
  |
3 | use std::sync::{Arc, Mutex};
  |                      ^^^^^

warning: unused import: `Connection`
 --> src\database\repository\quiz_session_repo.rs:3:24
  |
3 | use rusqlite::{params, Connection};
  |                        ^^^^^^^^^^

warning: unused import: `Mutex`
 --> src\database\repository\quiz_session_repo.rs:4:22
  |
4 | use std::sync::{Arc, Mutex};
  |                      ^^^^^

warning: unused imports: `ProgressStatus`, `QuestionProgress`, and `Question`
 --> src\database\repository\quiz_session_repo.rs:8:31
  |
8 |         CreateQuizSessionDto, ProgressStatus, Question, QuestionProgress, QuizResult, QuizSession,
  |                               ^^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^^^^^^

error[E0599]: no method named `search` found for struct `LazyTopicsRepository` in the current scope
  --> src\commands\query.rs:75:10
   |
75 |     repo.search(&keyword)
   |          ^^^^^^ method not found in `LazyTopicsRepository`
   |
  ::: src\database\repository\lazy_topics_repo.rs:7:1
   |
7  | pub struct LazyTopicsRepository {
   | ------------------------------- method `search` not found for this struct

error[E0282]: type annotations needed for `Vec<_>`
   --> src\database\repository\lazy_topics_repo.rs:153:13
    |
153 |         let mut updates = Vec::new();
    |             ^^^^^^^^^^^   ---------- type must be known at this point
    |
help: consider giving `updates` an explicit type, where the type for type parameter `T` is specified
    |
153 |         let mut updates: Vec<T> = Vec::new();
    |                        ++++++++

error[E0277]: the trait bound `usize: FromSql` is not satisfied
   --> src\database\repository\lazy_questions_repo.rs:328:68
    |
328 |             .query_row("SELECT count(*) FROM questions", [], |r| r.get(0))
    |                                                                    ^^^ the trait `FromSql` is not implemented for `usize`
    |
    = help: the following other types implement trait `FromSql`:
              f32
              f64
              i16
              i32
              i64
              i8
              isize
              u16
            and 2 others
note: required by a bound in `Row::<'_>::get`
   --> C:\Users\loidi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.38.0\src\row.rs:285:32
    |
285 |     pub fn get<I: RowIndex, T: FromSql>(&self, idx: I) -> Result<T> {
    |                                ^^^^^^^ required by this bound in `Row::<'_>::get`

error[E0277]: the trait bound `usize: FromSql` is not satisfied
   --> src\database\repository\lazy_questions_repo.rs:340:23
    |
340 |                 |r| r.get(0),
    |                       ^^^ the trait `FromSql` is not implemented for `usize`
    |
    = help: the following other types implement trait `FromSql`:
              f32
              f64
              i16
              i32
              i64
              i8
              isize
              u16
            and 2 others
note: required by a bound in `Row::<'_>::get`
   --> C:\Users\loidi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.38.0\src\row.rs:285:32
    |
285 |     pub fn get<I: RowIndex, T: FromSql>(&self, idx: I) -> Result<T> {
    |                                ^^^^^^^ required by this bound in `Row::<'_>::get`

warning: unused import: `rand::seq::SliceRandom`
 --> src\database\repository\quiz_session_repo.rs:2:5
  |
2 | use rand::seq::SliceRandom;
  |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0505]: cannot move out of `conn` because it is borrowed
   --> src\database\repository\quiz_session_repo.rs:243:14
    |
188 |         let conn = conn.lock().unwrap();
    |             ---- binding `conn` declared here
...
217 |         let mut stmt = conn.prepare(&sql).map_err(|e| e.to_string())?;
    |                        ---- borrow of `conn` occurs here
...
243 |         drop(conn);
    |              ^^^^ move out of `conn` occurs here
...
271 |     }
    |     - borrow might be used here, when `stmt` is dropped and runs the `Drop` code for type `Statement`

Some errors have detailed explanations: E0277, E0282, E0432, E0505, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `code-notes` (lib) generated 13 warnings
error: could not compile `code-notes` (lib) due to 7 previous errors; 13 warnings emitted
